src/objects/jiffle__Invites__c.object
<CustomObject>
    <description>Used to store association of Attendees to a meeting.</description>
    <fields>
        <fullName>jiffle__Attendee_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; +  jiffle__Attendee__r.Id ,  jiffle__Attendee__r.jiffle__Attendee_First_Name__c  +&quot; &quot;+jiffle__Attendee__r.jiffle__Attendee_Last_Name__c ,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Attendee_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attendee Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Attendee__c</fullName>
        <label>Attendee</label>
        <referenceTo>jiffle__Attendee__c</referenceTo>
        <relationshipLabel>Meeting Invites</relationshipLabel>
        <relationshipName>Invites</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>jiffle__Checkin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jiffle__Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>jiffle__Company__c</fullName>
        <formula>jiffle__Attendee__r.jiffle__Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Contact_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jiffle__Contact_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invites</relationshipLabel>
        <relationshipName>Invites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Event__c</fullName>
        <formula>jiffle__Meeting__r.jiffle__Event__r.Name</formula>
        <label>Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Is_Meeting_Requestor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Meeting Requestor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jiffle__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Invites</relationshipLabel>
        <relationshipName>Invites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Meeting_Date__c</fullName>
        <formula>jiffle__Meeting__r.jiffle__Start_Date_Time__c</formula>
        <label>Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>jiffle__Meeting_Objective__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Meeting Objective</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Meeting_Relations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for generating reports having invite object fields data</description>
        <label>Meeting Relations</label>
        <referenceTo>jiffle__Meeting_Relations__c</referenceTo>
        <relationshipLabel>Invites</relationshipLabel>
        <relationshipName>Invites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Meeting_Requestor__c</fullName>
        <formula>jiffle__Meeting__r.jiffle__Meeting_Requestor__c</formula>
        <label>Meeting Requestor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Meeting__c</fullName>
        <label>Meeting</label>
        <referenceTo>jiffle__Meeting__c</referenceTo>
        <relationshipLabel>Invites</relationshipLabel>
        <relationshipName>Invites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>jiffle__Partial_End_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attendee End Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Partial_Start_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attendee Start Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Primary_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jiffle__Status__c</fullName>
        <formula>IF( jiffle__Checkin__c , &apos;Attended&apos;,  jiffle__Attendee_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Unique_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>jiffle__Waitlist_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Waitlist Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__custom_mapped_fields__c</fullName>
        <description>SFDC contact/lead fields mapped on JN user profile are captured here.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Invite</label>
    <listViews>
        <fullName>jiffle__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ATT-{000000}</displayFormat>
        <label>Invite Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>